--- a/src-capacitor/android/app/src/main/res/values/styles.xml
+++ b/src-capacitor/android/app/src/main/res/values/styles.xml
@@ -7,8 +7,6 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-      <item name="android:windowDisablePreview">true</item>
-      <item name="android:windowIsTranslucent">true</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.NoActionBar">
@@ -18,5 +16,7 @@
     </style>
 
 
-
+    <style name="AppTheme.NoActionBarLaunch" parent="AppTheme.NoActionBar">
+        <item name="android:background">@drawable/splash</item>
+    </style>
 </resources>
